Adapted driver to new, official clock interface.

--- a/fpga1/Makefile
+++ b/fpga1/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all
 all:
-	make -C driver
-	make -C tests
+	make -C driver KERNEL=$(KERNEL) CROSS_COMPILE=$(CROSS_COMPILE)
+	make -C tests CROSS_COMPILE=$(CROSS_COMPILE)
 clean:
 	make -C driver clean
 	make -C tests clean
