--- a/fpga1/tests/Makefile
+++ b/fpga1/tests/Makefile
@@ -2,7 +2,7 @@ tests = fpga1-clock fpga1-carrier fpga1-thread
 
 CFLAGS = -g -Wall -I../driver -I ../.. -D_AUD_SOURCE
 LDFLAGS = -specs=specs-audrt-prio -laudis -lrt -lpthread -Xlinker -dynamic-linker -Xlinker /audislib/ld-linux.so.2
-CC := /root/views/dcuos7/derived/tdc/tools/bin/i686-v42-gcc
+CC := $(CROSS_COMPILE)gcc
 
 all: $(tests)
 
